error when open_basedir restriction in effect
git-svn-id: http://piwigo.org/svn/extensions/EasyCaptcha@24233 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/language/en_UK/description.txt
+++ b/language/en_UK/description.txt
@@ -1,1 +1,1 @@
-An fun antibot system for comments, registration, ContactForm and GuestBook.
+A fun antibot system for comments, registration, ContactForm and GuestBook.
