[easy_captcha] Update nl_NL, thanks to : Kees Hessels
git-svn-id: http://piwigo.org/svn/extensions/EasyCaptcha@26032 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/language/nl_NL/description.txt
+++ b/language/nl_NL/description.txt
@@ -1,1 +1,1 @@
-Een leuke AntiBot systeem voor commentaar, registratie, contact formulier en gastenboek.
+Een leuk AntiBot systeem voor commentaar, registratie, contact formulier en gastenboek.
