[easy_captcha] Update pt_PT, thanks to : ANO
git-svn-id: http://piwigo.org/svn/extensions/EasyCaptcha@26547 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/language/pt_PT/description.txt
+++ b/language/pt_PT/description.txt
@@ -1,1 +1,1 @@
-Um sistema divertido antibot  para usar nos comentários, registo, Formulário de contacto e livro de visitas.
+Um sistema divertido e antibot  para usar nos comentários, registo, Formulário de contacto e livro de visitas.
