Update uk_UA, thanks to m_alien

--- a/language/uk_UA/description.txt
+++ b/language/uk_UA/description.txt
@@ -1,1 +1,1 @@
-Система забавного антибота для коментарів, реєстрації, ContactForm та GuestBook.
+Система забавного антибота для коментарів, реєстрації, Форми контактів та Гостьової книги.
